build/log/idf_py_stdout_output_14227
[1/10] Building C object esp-idf/gps/CMakeFiles/__idf_gps.dir/gps.c.obj
FAILED: esp-idf/gps/CMakeFiles/__idf_gps.dir/gps.c.obj 
/home/dsopocko/.espressif/tools/riscv32-esp-elf/esp-13.2.0_20230928/riscv32-esp-elf/bin/riscv32-esp-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.3-dev-892-g692c1fcc52-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/dsopocko/espressif/esp-git/heatmap/build/config -I/home/dsopocko/espressif/esp-git/heatmap/components/gps/include -I/home/dsopocko/esp/esp-idf/components/newlib/platform_include -I/home/dsopocko/esp/esp-idf/components/freertos/config/include -I/home/dsopocko/esp/esp-idf/components/freertos/config/include/freertos -I/home/dsopocko/esp/esp-idf/components/freertos/config/riscv/include -I/home/dsopocko/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/dsopocko/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -I/home/dsopocko/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos -I/home/dsopocko/esp/esp-idf/components/freertos/esp_additions/include -I/home/dsopocko/esp/esp-idf/components/esp_hw_support/include -I/home/dsopocko/esp/esp-idf/components/esp_hw_support/include/soc -I/home/dsopocko/esp/esp-idf/components/esp_hw_support/include/soc/esp32c3 -I/home/dsopocko/esp/esp-idf/components/heap/include -I/home/dsopocko/esp/esp-idf/components/log/include -I/home/dsopocko/esp/esp-idf/components/soc/include -I/home/dsopocko/esp/esp-idf/components/soc/esp32c3 -I/home/dsopocko/esp/esp-idf/components/soc/esp32c3/include -I/home/dsopocko/esp/esp-idf/components/hal/platform_port/include -I/home/dsopocko/esp/esp-idf/components/hal/esp32c3/include -I/home/dsopocko/esp/esp-idf/components/hal/include -I/home/dsopocko/esp/esp-idf/components/esp_rom/include -I/home/dsopocko/esp/esp-idf/components/esp_rom/include/esp32c3 -I/home/dsopocko/esp/esp-idf/components/esp_rom/esp32c3 -I/home/dsopocko/esp/esp-idf/components/esp_common/include -I/home/dsopocko/esp/esp-idf/components/esp_system/include -I/home/dsopocko/esp/esp-idf/components/esp_system/port/soc -I/home/dsopocko/esp/esp-idf/components/esp_system/port/include/riscv -I/home/dsopocko/esp/esp-idf/components/esp_system/port/include/private -I/home/dsopocko/esp/esp-idf/components/riscv/include -I/home/dsopocko/esp/esp-idf/components/lwip/include -I/home/dsopocko/esp/esp-idf/components/lwip/include/apps -I/home/dsopocko/esp/esp-idf/components/lwip/include/apps/sntp -I/home/dsopocko/esp/esp-idf/components/lwip/lwip/src/include -I/home/dsopocko/esp/esp-idf/components/lwip/port/include -I/home/dsopocko/esp/esp-idf/components/lwip/port/freertos/include -I/home/dsopocko/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/dsopocko/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/dsopocko/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/dsopocko/esp/esp-idf/components/driver/deprecated -I/home/dsopocko/esp/esp-idf/components/driver/i2c/include -I/home/dsopocko/esp/esp-idf/components/driver/ledc/include -I/home/dsopocko/esp/esp-idf/components/driver/parlio/include -I/home/dsopocko/esp/esp-idf/components/driver/touch_sensor/include -I/home/dsopocko/esp/esp-idf/components/driver/twai/include -I/home/dsopocko/esp/esp-idf/components/driver/uart/include -I/home/dsopocko/esp/esp-idf/components/driver/usb_serial_jtag/include -I/home/dsopocko/esp/esp-idf/components/esp_pm/include -I/home/dsopocko/esp/esp-idf/components/esp_ringbuf/include -I/home/dsopocko/esp/esp-idf/components/esp_driver_gpio/include -I/home/dsopocko/esp/esp-idf/components/esp_driver_pcnt/include -I/home/dsopocko/esp/esp-idf/components/esp_driver_gptimer/include -I/home/dsopocko/esp/esp-idf/components/esp_driver_spi/include -I/home/dsopocko/esp/esp-idf/components/esp_driver_mcpwm/include -I/home/dsopocko/esp/esp-idf/components/esp_driver_ana_cmpr/include -I/home/dsopocko/esp/esp-idf/components/esp_driver_i2s/include -I/home/dsopocko/esp/esp-idf/components/esp_driver_sdmmc/include -I/home/dsopocko/esp/esp-idf/components/sdmmc/include -I/home/dsopocko/esp/esp-idf/components/esp_driver_sdspi/include -I/home/dsopocko/esp/esp-idf/components/esp_driver_sdio/include -I/home/dsopocko/esp/esp-idf/components/esp_driver_dac/include -I/home/dsopocko/esp/esp-idf/components/esp_driver_rmt/include -I/home/dsopocko/esp/esp-idf/components/esp_driver_tsens/include -I/home/dsopocko/esp/esp-idf/components/esp_driver_sdm/include -march=rv32imc_zicsr_zifencei  -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fno-shrink-wrap -fmacro-prefix-map=/home/dsopocko/espressif/esp-git/heatmap=. -fmacro-prefix-map=/home/dsopocko/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/gps/CMakeFiles/__idf_gps.dir/gps.c.obj -MF esp-idf/gps/CMakeFiles/__idf_gps.dir/gps.c.obj.d -o esp-idf/gps/CMakeFiles/__idf_gps.dir/gps.c.obj -c /home/dsopocko/espressif/esp-git/heatmap/components/gps/gps.c
/home/dsopocko/espressif/esp-git/heatmap/components/gps/gps.c: In function 'get_gps_data':
/home/dsopocko/espressif/esp-git/heatmap/components/gps/gps.c:52:5: error: expected expression before '/' token
   52 |     /cold_start();
      |     ^
[2/10] Performing build step for 'bootloader'
[1/1] cd /home/dsopocko/espressif/esp-git/heatmap/build/bootloader/esp-idf/esptool_py && /home/dsopocko/.espressif/python_env/idf5.3_py3.10_env/bin/python /home/dsopocko/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/dsopocko/espressif/esp-git/heatmap/build/bootloader/bootloader.bin
Bootloader binary size 0x5160 bytes. 0x2ea0 bytes (36%) free.
ninja: build stopped: subcommand failed.
